--- a/Note/res/layout/dialog_layout.xml
+++ b/Note/res/layout/dialog_layout.xml
@@ -32,6 +32,15 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center">
+	        <TextView 
+	            android:id="@+id/tip_text"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="center"
+	            android:textColor="@color/white"
+	            android:layout_centerInParent="true"
+	            android:text="@string/tip_text" />
+	        
 	        <EditText
 	            android:id="@+id/content"
 	            android:layout_width="match_parent"
@@ -40,7 +49,8 @@
 	            android:gravity="center"
 	            android:singleLine="true"
 	            android:textColor="@color/dialog_bg"
-	            android:maxLength="6"/>
+	            android:maxLength="6"
+	            android:visibility="invisible"/>
 	    </RelativeLayout>
 	    
 	    <RelativeLayout 
