--- a/Note/res/values/styles.xml
+++ b/Note/res/values/styles.xml
@@ -18,8 +18,14 @@
     </style>
     
     <style name="MyDialogTheme" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        
     </style>
 
 </resources>
