--- a/Note/res/layout/main.xml
+++ b/Note/res/layout/main.xml
@@ -1,21 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="@android:color/white">
-    
-    <TextView 
+    android:layout_height="match_parent"
+    android:background="@android:color/white" >
+
+    <TextView
         android:id="@+id/main_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#d94839"
-        android:textColor="@color/white"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/white" />
+
+    <RelativeLayout
+        android:id="@+id/add_btn_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="#d94839"
+        android:clipChildren="false"
+        android:clipToPadding="false" >
+
+        <ImageButton
+            android:id="@+id/add_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/path2_composer_camera" 
+            android:visibility="gone"/>
+        
+        <ImageButton
+            android:id="@+id/about_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/path2_composer_with"
+            android:visibility="gone"/>
+    </RelativeLayout>
     
-    <Button 
-        android:id="@+id/creatDB_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add"/>
+    <RelativeLayout 
+            android:id="@+id/show_hide_btn" 
+           android:layout_width="60dp"
+           android:layout_height="60dp"
+           android:layout_alignParentRight="true"
+           android:layout_alignParentBottom="true"
+           android:background="@drawable/path2_composer_button">
+
+            <ImageView
+                android:id="@+id/show_hide_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/path2_composer_icn_plus" />
+        </RelativeLayout>
 
 </RelativeLayout>
