--- a/Note/res/values/color.xml
+++ b/Note/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="blue">#1874CD</color>
     <color name="dialog_bg">#ffe74c3c</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     
     <color name="btn_press_color">#FFa5281b</color>
     <color name="btn_unpress_color">#FFc0392b</color>
