--- a/Note/res/layout/list_adapter_item.xml
+++ b/Note/res/layout/list_adapter_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll_view"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:scrollbars="none" >
+    android:layout_height="wrap_content" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,37 +13,36 @@
             android:id="@+id/left_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
-	
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:textColor="@color/black"/>
-            
-            <TextView 
+                android:textColor="@color/black" />
+
+            <TextView
                 android:id="@+id/create_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/title"
                 android:layout_alignParentLeft="true"
-                android:textColor="#EAEAEA"/>
-            
-            <TextView 
+                android:layout_below="@id/title"
+                android:textColor="#EAEAEA" />
+
+            <TextView
                 android:id="@+id/count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:textColor="#EAEAEA"/>
-            
-            <TextView 
+                android:textColor="#EAEAEA" />
+
+            <TextView
                 android:id="@+id/modify_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/count"
-                android:textColor="#EAEAEA"/>
-                
+                android:textColor="#EAEAEA" />
         </RelativeLayout>
 
         <Button
@@ -54,4 +52,4 @@
             android:text="delete" />
     </LinearLayout>
 
-</HorizontalScrollView>
+</LinearLayout>
