--- a/Note/res/layout/main.xml
+++ b/Note/res/layout/main.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:textColor="@color/white" />
     
-    <ListView 
+    <com.note.util.DeleteListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
